02_code1/grade.txt
Grading at Sun Sep 13 01:15:08 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘max’:
temp.c:7:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
